// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalFooter /> matches snapshot 1`] = `
<div
  class="footer"
>
  Test
</div>
`;

exports[`<ModalFooter /> renders \`compact\` version 1`] = `
<div
  class="footer compact"
>
  Test
</div>
`;
